tests/errors/no_unneeded_curly_braces.php
<?php

declare(strict_types=1);

{
    if (isset($a)) {
    }
}
